- add some tests on the updatesite resolver - fix the way artifact location is handled so at the end we have a proper URL
git-svn-id: https://svn.apache.org/repos/asf/ant/ivy/core/trunk@1165100 13f79535-47bb-0310-9956-ffa450edef68